WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
290614
[GTK][WPE][Skia] Record all dirty tiles of a layer once, don't record each tile
https://bugs.webkit.org/show_bug.cgi?id=290614
Summary
[GTK][WPE][Skia] Record all dirty tiles of a layer once, don't record each tile
Nikolas Zimmermann
Reported
2025-03-28 01:43:22 PDT
For each layer, we currently record each dirty tile, then replay in a worker thread. We can do better and once record a SkPicture of the area spanning all dirty tiles, and then use the same SkPicture for replaying N times, for each dirty tile.
Attachments
Add attachment
proposed patch, testcase, etc.
Nikolas Zimmermann
Comment 1
2025-03-28 01:46:49 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/43183
EWS
Comment 2
2025-03-31 06:44:57 PDT
Committed
292929@main
(5abe8ab78cbb): <
https://commits.webkit.org/292929@main
> Reviewed commits have been landed. Closing PR #43183 and removing active labels.
Nikolas Zimmermann
Comment 3
2025-03-31 13:40:59 PDT
Build fix removing unused variables tracked in
https://github.com/WebKit/WebKit/pull/43342
.
Michael Catanzaro
Comment 4
2025-05-29 07:12:46 PDT
***
Bug 291759
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug