Cherry-pick 292929@main (5abe8ab78cbb). https://bugs.webkit.org/show_bug.cgi?id=290614

[GTK][WPE][Skia] Record all dirty tiles of a layer once, don't record each tile
    https://bugs.webkit.org/show_bug.cgi?id=290614

    Reviewed by Carlos Garcia Campos.

    For each layer, we currently record each dirty tile, then replay in a worker
    thread. We can do better and once record a SkPicture of the area spanning all
    dirty tiles, and then use the same SkPicture for replaying N times, for each
    dirty tile.

    Covered by existing tests.

    * Source/WebCore/platform/Skia.cmake:
    * Source/WebCore/platform/SourcesSkia.txt:
    * Source/WebCore/platform/graphics/skia/SkiaPaintingEngine.cpp:
    (WebCore::SkiaPaintingEngine::paint):
    (WebCore::SkiaPaintingEngine::record):
    (WebCore::SkiaPaintingEngine::replay):
    (WebCore::SkiaPaintingEngine::paintGraphicsLayerIntoBuffer const): Deleted.
    (WebCore::SkiaPaintingEngine::paintLayer): Deleted.
    (WebCore::SkiaPaintingEngine::postPaintingTask): Deleted.
    (WebCore::SkiaPaintingEngine::performPaintingTask): Deleted.
    * Source/WebCore/platform/graphics/skia/SkiaPaintingEngine.h:
    (WebCore::SkiaPaintingEngine::useThreadedRendering const):
    * Source/WebCore/platform/graphics/skia/SkiaRecordingResult.cpp: Added.
    (WebCore::SkiaRecordingResult::SkiaRecordingResult):
    (WebCore::SkiaRecordingResult::create):
    (WebCore::SkiaRecordingResult::hasFences):
    (WebCore::SkiaRecordingResult::waitForFenceIfNeeded):
    * Source/WebCore/platform/graphics/skia/SkiaRecordingResult.h: Added.
    * Source/WebCore/platform/graphics/skia/SkiaReplayCanvas.cpp:
    (WebCore::SkiaReplayCanvas::SkiaReplayCanvas):
    (WebCore::SkiaReplayCanvas::create):
    (WebCore::SkiaReplayCanvas::waitForRenderingCompletionAndRewrapImageIfNeeded):
    * Source/WebCore/platform/graphics/skia/SkiaReplayCanvas.h:
    * Source/WebCore/platform/graphics/texmap/coordinated/CoordinatedBackingStoreProxy.cpp:
    (WebCore::CoordinatedBackingStoreProxy::updateIfNeeded):
    * Source/WebCore/platform/graphics/texmap/coordinated/CoordinatedPlatformLayer.cpp:
    (WebCore::CoordinatedPlatformLayer::paint):
    (WebCore::CoordinatedPlatformLayer::record):
    (WebCore::CoordinatedPlatformLayer::replay):
    * Source/WebCore/platform/graphics/texmap/coordinated/CoordinatedPlatformLayer.h:

    Canonical link: https://commits.webkit.org/292929@main